--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -35,6 +35,12 @@ img {
   width: 100%;
 }
 
+a {
+  color  : #409EFF;
+  cursor : pointer;
+  display: inline-block;
+}
+
 .fixedMune {
   height      : 100vh;
   position    : fixed;
@@ -43,7 +49,7 @@ img {
   width       : 220px;
   border-right: 1px solid #e6e6e6;
 
-  .el-menu {
+  #mune {
     border-right: none;
     height      : calc(100vh - 60px);
     overflow-y  : auto;
@@ -135,4 +141,31 @@ img {
   .el-form-item__label {
     color: white;
   }
+}
+
+#collapseList {
+  position        : absolute;
+  top             : 0;
+  right           : 0;
+  height          : calc(100vh - 160px);
+  width           : 300px;
+  border          : 1px solid #e6e6e6;
+  background-color: white;
+  overflow-y      : auto;
+
+  .el-collapse {
+    border-top: none;
+
+    .el-collapse-item {
+      padding: 0 15px;
+    }
+  }
+}
+
+#tableForm thead .el-table-column--selection .cell {
+  display: none;
+}
+
+.confirm {
+  margin-top: 15px;
 }
