--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -169,3 +169,17 @@ a {
 .confirm {
   margin-top: 15px;
 }
+
+.lists {
+  padding-right: 30px;
+  position     : relative;
+
+  i {
+    position : absolute;
+    right    : 0;
+    color    : #F56C6C;
+    font-size: 18px;
+    top      : 6px;
+    cursor   : pointer;
+  }
+}
