--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -9,7 +9,6 @@
  高宽分别对应横竖滚动条的尺寸*/
 ::-webkit-scrollbar {
   width           : 5px;
-  height          : 50px;
   background-color: #F5F5F5;
 }
 
@@ -182,4 +181,8 @@ a {
     top      : 6px;
     cursor   : pointer;
   }
+}
+
+.el-scrollbar__wrap {
+  overflow-x: hidden;
 }
