--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -220,10 +220,7 @@ a {
 -----*/
 #boxNews {
   width     : 350px;
-  height    : calc(100% - 40px);
-  position  : absolute;
-  top       : 20px;
-  left      : 20px;
+  height    : 100%;
   overflow-y: auto;
   border    : 1px solid #e6e6e6;
 
@@ -234,17 +231,118 @@ a {
   }
 
   .trayList {
+
     li {
+      line-height  : 30px;
+      padding      : 0 15px;
+      font-size    : 12px;
+      white-space  : nowrap;
+      /*内容超宽后禁止换行显示*/
+      overflow     : hidden;
+      /*超出部分隐藏*/
+      text-overflow: ellipsis;
+      /*文字超出部分以省略号显示*/
+
       &:nth-child(even) {
         background-color: rgb(239, 240, 247);
       }
 
-      line-height: 30px;
-      padding    :0 15px;
-
       span {
         font-size: 12px;
+        width    : 150px;
+        display  : inline-block;
       }
     }
+  }
+}
+
+#trayKpi {
+  width     : 350px;
+  height    : 100%;
+  overflow-y: auto;
+  border    : 1px solid #e6e6e6;
+
+  .content {
+    height    : calc(100% - 112px);
+    overflow-y: auto;
+
+    h2 {
+      background-color: #e6e6e6;
+      text-align      : center;
+      line-height     : 40px;
+
+    }
+
+    ul {
+      li {
+        line-height: 30px;
+        font-size  : 12px;
+        padding    : 0 15px;
+        display    : block;
+
+        &:nth-child(even) {
+          background-color: rgb(239, 240, 247);
+        }
+
+        span {
+          width        : 150px;
+          padding-right: 15px;
+          font-size    : 12px;
+          line-height  : 30px;
+          display      : inline-block;
+        }
+      }
+    }
+  }
+}
+
+#canvasImg {
+  width  : calc(100% - 704px);
+  height : 100%;
+  display: block;
+}
+
+.flex {
+  display: flex;
+  height : calc(100vh - 160px);
+}
+
+.show {
+  border : 1px solid #e6e6e6;
+  padding: 15px;
+}
+
+.button-group {
+  width          : 100%;
+  display        : flex;
+  align-items    : center;
+  justify-content: center;
+}
+
+.btn {
+  margin-top   : 15px;
+  margin-bottom: 15px;
+}
+
+.title {
+  border-bottom: 1px solid #e6e6e6;
+
+  h1,
+  p {
+    font-size  : 30px;
+    line-height: 50px;
+    text-align : center;
+  }
+}
+
+.btn-icon {
+  margin         : 15px 0;
+  display        : flex;
+  flex           : 1;
+  justify-content: center;
+  align-items    : center;
+
+  .el-button {
+    margin: 0 15px;
   }
 }
