--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -346,3 +346,18 @@ a {
     margin: 0 15px;
   }
 }
+
+.djs-palette .entry.ttttt0 {
+  width          : 100%;
+  position       : relative;
+  display        : flex;
+  justify-content: center;
+
+  img {
+    width: 40%;
+  }
+
+  p {
+    font-size: 12px;
+  }
+}
