完成模板的选择

--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -347,7 +347,7 @@ a {
   }
 }
 
-.djs-palette .entry.ttttt0 {
+.djs-palette .entry.customer-element {
   width          : 100%;
   position       : relative;
   display        : flex;
@@ -358,6 +358,11 @@ a {
   }
 
   p {
+    width: 60%;
+    line-height: 12px;
     font-size: 12px;
+    word-wrap:break-word;
+    word-break: break-all;
+    margin: auto 0px;
   }
 }
