--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -120,6 +120,7 @@ a {
   align-items    : center;
   justify-content: flex-end;
   padding        : 10px 0;
+  border-bottom  : 1px solid @titleBgk;
 }
 
 .el-footer {
@@ -385,11 +386,11 @@ a {
 
 
 .tagtitle {
-  background-color: @titleBgk;
-  padding         : 5px;
-  overflow        : auto;
-  width           : calc(100% - 30px);
-  overflow-x      : auto;
+  // background-color: @titleBgk;
+  padding   : 5px;
+  overflow  : auto;
+  width     : calc(100% - 30px);
+  overflow-x: auto;
 
   .tabs {
     .el-tag {
