定义bpmn可变更大小组件，完成属性信息的扩展

--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -213,6 +213,10 @@ a {
   display: none;
 }
 
+.el-table .warning-row {
+  background: oldlace;
+}
+
 .confirm {
   margin-top: 15px;
 }
@@ -224,6 +228,14 @@ a {
   i {
     position : absolute;
     right    : 0;
+    color    : #F56C6C;
+    font-size: 18px;
+    top      : 6px;
+    cursor   : pointer;
+  }
+  .second {
+    position : absolute;
+    right    : 30px;
     color    : #F56C6C;
     font-size: 18px;
     top      : 6px;
